# which-model

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: refresh-data.yml
data/: hardware_snippets.yaml  kb_embeddings.json  models.db
docs/: DEPLOYMENT.md  GUARDRAILS.md  KB_STYLE.md  PRODUCTION.md  RUNBOOK.md  SYSTEM_DESIGN.md
docs/product/: ENGINEERING_STORY.md  GTM.md  PRODUCT.md  ROADMAP.md
evals/: __init__.py  checks.py  mock_llm.py  run.py  scenarios.yaml
ingestion/: __init__.py  aliases.py  http.py  livebench.py  local_models.py  openrouter.py  refresh.py  schema.py
ingestion/snapshots/: livebench_categories.json  livebench_meta.json  openrouter.json
kb/benchmarks/: aider-polyglot.md  aime.md  arc-agi-2.md  arena-elo.md  gpqa-diamond.md  hle.md  livebench.md  livecodebench-pro.md  mmmu.md  swe-bench.md  terminal-bench.md
kb/guides/: choosing-benchmarks.md  cloud-inference-options.md  context-length.md  getting-api-keys.md  gpu-hosting.md  hardware-landscape.md  inference-world-updates.md  local-inference.md  mixture-of-experts.md  pricing-mental-models.md  reading-user-language.md  running-models-locally.md  serving-stacks.md  using-openrouter.md
kb/regional/: india-notes.md
kb/taxonomy/: agentic-tool-use.md  chat-assistant.md  coding.md  creative-writing.md  rag-doc-qa.md  (+4 more)
tests/: mocks.py  test_agent_graph.py  test_ingestion.py  test_retrieval.py  test_tools.py  test_web.py
whichmodel/: __init__.py  config.py  logging_setup.py  schemas.py  sessions.py
(+28 files in other folders)
