[project]
name = "which-model"
version = "0.1.0"
description = "Conversational LLM recommender: chat-first app that helps non-experts pick the right LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "langgraph>=0.2",
    "openai>=1.40",
    "httpx>=0.27",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["whichmodel*", "ingestion*", "evals*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
